info container-section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,10 +101,23 @@ nav a {
 
 /* main-section style  */
 
+.main{
+    width: 1140px;
+    margin: 0 auto;
+}
+
 /* about-section style  */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px;
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
