--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,5 +156,30 @@ main section {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
-    
+
+}
+
+.resume-containar {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+resume-item-institute{
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+
+.resime-item-description,
+.resume-item-institute {
+    color: #757575;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
